provisioning/200_apps/base/tracetest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
    traefik.ingress.kubernetes.io/router.middlewares: op-keycloak-traefik-forward-auth@kubernetescrd

spec:
  ingressClassName: traefik
  rules:
  - host: << example.com >>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tracetest
            port:
              number: 11633
  tls:
  - hosts:
    - << example.com >>
    secretName: << example.com >>
